--- a/src/style.css
+++ b/src/style.css
@@ -1,2 +1,5 @@
 @import url(init.css);
+@import url(utils.css);
 @import url(main-logo.css);
+@import url(main-wrapper.css);
+@import url(social-navigation.css);
