--- a/src/fonts.css
+++ b/src/fonts.css
@@ -15,6 +15,8 @@ body {
 .main-heading {
     --font-weight: 300;
     font-weight: var(--font-weight);
+    font-size: 1.25rem;
+    line-height: 1.25;
 
     strong {
         --font-weight: 700;
