--- a/src/main-wrapper.css
+++ b/src/main-wrapper.css
@@ -2,6 +2,7 @@
     display: grid;
     margin-inline: 1.75rem;
     max-width: 44.5rem;
+    text-align: center;
 
     @media (min-width: 48rem) {
         margin-inline: auto;
