--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @import url(init.css);
 @import url(fonts.css);
 @import url(utils.css);
-@import url(main-logo.css);
 @import url(main-wrapper.css);
+@import url(main-logo.css);
+@import url(main-form.css);
 @import url(social-navigation.css);
