--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,30 +1,7 @@
-@property --font-weight {
-    syntax: "<number>";
-    initial-value: 300;
-    inherits: false;
-}
-
-body {
-    font-family: "Libre Franklin", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    --font-weight: 300;
-    font-weight: var(--font-weight);
-}
-
-.main-heading {
-    --font-weight: 300;
-    font-weight: var(--font-weight);
-    font-size: 1.25rem;
-    line-height: 1.25;
-
-    strong {
-        --font-weight: 700;
-        font-weight: var(--font-weight);
-    }
-}
-
-button {
-    --font-weight: 600;
-    font-weight: var(--font-weight);
+:root {
+	/* color-scheme: light dark; */
+    --main-font-family: "Libre Franklin", sans-serif;
+    --font-weight-light: 300;
+    --font-weight-semibold: 600;
+    --font-weight-bold: 700;
 }
