--- a/src/init.css
+++ b/src/init.css
@@ -18,6 +18,11 @@ body {
     margin: 0;
     min-height: 100svh;
     scrollbar-gutter: stable;
+
+    font-family: var(--main-font-family);
+    font-weight: var(--font-weight-light);
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 img {
