--- a/src/social-navigation.css
+++ b/src/social-navigation.css
@@ -14,23 +14,22 @@
         aspect-ratio: 1;
         border: solid black thin;
         border-radius: 100%;
-        text-indent: -100rem;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: 60%;
+        align-content: center;
     }
 
-    .social-nav__link--facebook {
-        background-image: url("/public/facebook-f-brands-solid-full.svg");
+    .social-nav__image {
+        width: 60%;
+        margin-top: 20%;
     }
 
-    .social-nav__link--twitter {
-        background-image: url("/public/twitter-brands-solid-full.svg");
+    .social-nav__image--twitter {
+        margin-left: 7.5%;
     }
 
-    .social-nav__link--instagram {
-        background-image: url("/public/instagram-brands-solid-full.svg");
-        background-size: 75%;
+    .social-nav__image--instagram {
+        width: 72%;
+        margin-top: 15%;
+        margin-left: 3%;
     }
 
     @media (min-width: 48rem) {}
