--- a/src/main-heading.css
+++ b/src/main-heading.css
@@ -1,8 +1,8 @@
 .main-heading {
-    font-weight: var(--font-weight-light);
     font-size: 1.25rem;
     line-height: 1.25;
-    margin-block: 0;
+    font-weight: var(--font-weight-light);
+    margin-block: 0 .75rem;
     color: var(--netral-400);
 
     strong {
