--- a/src/main-logo.css
+++ b/src/main-logo.css
@@ -3,6 +3,7 @@
     margin: auto;
     width: 100%;
     max-width: 3.375rem;
+    margin-bottom: 2.5rem;
 
     @media (min-width: 48rem) {
         max-width: 5.375rem;
