--- a/src/main-wrapper.css
+++ b/src/main-wrapper.css
@@ -1,6 +1,6 @@
 .main-wrapper {
     display: grid;
-    margin-inline: 1.75rem;
+    margin: 5.25rem 1.75rem auto;
     max-width: 44.5rem;
     text-align: center;
 
