--- a/src/social-navigation.css
+++ b/src/social-navigation.css
@@ -1,7 +1,7 @@
 .social-nav {
     display: flex;
     gap: 1rem;
-    margin: auto;
+    margin: 7.5rem auto 1.5rem;
 
     .social-nav__list {
         display: contents;
@@ -12,7 +12,7 @@
         display: block;
         width: 2rem;
         aspect-ratio: 1;
-        border: solid black thin;
+        border: solid thin var(--main-color-100);
         border-radius: 100%;
         align-content: center;
     }
