--- a/src/main-wrapper.css
+++ b/src/main-wrapper.css
@@ -3,6 +3,7 @@
     margin: 5.25rem 1.75rem auto;
     max-width: 44.5rem;
     text-align: center;
+    position: relative;
 
     @media (min-width: 48rem) {
         margin-inline: auto;
