Pixel perfect test tablet

--- a/src/styles/main-wrapper.css
+++ b/src/styles/main-wrapper.css
@@ -6,6 +6,6 @@
     position: relative;
 
     @media (min-width: 48rem) {
-        margin-inline: auto;
+        margin: 5.35rem auto auto;
     }
 }
