--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,6 +6,7 @@
 @import url(main-heading.css);
 @import url(main-logo.css);
 @import url(main-form.css);
+@import url(main-banner.css);
 @import url(social-navigation.css);
 @import url(copyright.css);
 @import url(pixel-perfect-test.css);
