--- a/src/styles/social-navigation.css
+++ b/src/styles/social-navigation.css
@@ -47,5 +47,7 @@
         }
     }
     
-    @media (min-width: 48rem) {}
+    @media (min-width: 48rem) {
+        margin: 4.4rem auto 1.5rem;
+    }
 }
