--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,4 +9,6 @@
 @import url(main-banner.css);
 @import url(social-navigation.css);
 @import url(copyright.css);
-@import url(pixel-perfect-test.css);
+
+/* Uncomment the following to test with a screenshot from the figma file */
+/* @import url(pixel-perfect-test.css); */
